Completed all 9 tasks